--- a/LatexDrawingEditor/LatexDrawingEditor.csproj
+++ b/LatexDrawingEditor/LatexDrawingEditor.csproj
@@ -15,6 +15,7 @@
     <EmbeddedResource Remove="Tests\**" />
     <None Remove="Tests\**" />
     <None Remove=".gitignore" />
+    <None Remove="Assets\Toolbar\place-node-icon-tiny.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="LatexDrawingEditor.Test.csproj" />
@@ -41,5 +42,8 @@
     <ProjectReference Include="..\DockSystemForLDE\src\Dock.Model\Dock.Model.csproj" />
     <ProjectReference Include="..\DockSystemForLDE\src\Dock.ProportionalStackPanel\Dock.ProportionalStackPanel.csproj" />
     <ProjectReference Include="..\DockSystemForLDE\src\Dock.Serializer\Dock.Serializer.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Toolbar\place-node-icon-tiny.png" />
   </ItemGroup>
 </Project>
