--- a/LatexDrawingEditor/LatexDrawingEditor.csproj
+++ b/LatexDrawingEditor/LatexDrawingEditor.csproj
@@ -59,5 +59,8 @@
     <Compile Update="Styles\Themes\LightTheme.axaml.cs">
       <DependentUpon>LightTheme.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\CanvasRenderView.axaml.cs">
+      <DependentUpon>CanvasRenderView.axaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
